--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,2 @@
-*.o
-*.Debug
-*.Release
-*.Stash
-*.exe
-\Kursova\Kursova.pro.user.*
+build-Kursova-Desktop_Qt_5_11_2_MinGW_32bit-Debug/
+!build-Kursova-Desktop_Qt_5_11_2_MinGW_32bit-Debug/*.h
